@@ -2,6 +2,7 @@ Version Next
 
     - Changed IdGenerator to re-use the same instance on re-entrant invocation;
       NOTE: backward-incompatible change.
+    - Added AtomicUpdateFileOutputStream and {,File}StreamRepository
     - Added ThreadLocalHolder
 
 Version 1.0.349 Released April 27, 2012
